[gd_scene load_steps=2 format=3 uid="uid://dndrc5eqw8jdu"]

[ext_resource type="Script" path="res://main_menu/sound_slider.gd" id="1_d54pg"]

[node name="SoundSlider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d54pg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -22.0
offset_right = 254.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="NameLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 32
text = "90%"

[connection signal="value_changed" from="HBoxContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
